# nexum

./: Cargo.toml
crates/injected/: Cargo.toml
crates/injected/src/: eip6963.rs  lib.rs  provider.rs
crates/injector/src/: lib.rs
crates/primitives/src/: message.rs  protocol.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs  provider.rs
crates/worker/src/events/: runtime.rs
