[package]
name = "injected"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"

[dependencies]
serde.workspace = true
serde-wasm-bindgen.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys.workspace = true
gloo-utils.workspace = true

tracing.workspace = true
tracing-wasm.workspace = true
console_error_panic_hook.workspace = true

[build-dependencies]
base64 = "0.22.1"
